force-app/main/default/objects/Employee__c/fields/EmpID__c.field-meta.xml
<CustomField>
    <fullName>EmpID__c</fullName>
    <label>EmpID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>