force-app/main/default/objects/Employee__c/fields/FatherName__c.field-meta.xml
<CustomField>
    <fullName>FatherName__c</fullName>
    <label>FatherName</label>
    <length>18</length>
    <type>Text</type>
</CustomField>