force-app/main/default/objects/Employee__c/fields/LaunchDate__c.field-meta.xml
<CustomField>
    <fullName>LaunchDate__c</fullName>
    <label>LaunchDate</label>
    <type>DateTime</type>
</CustomField>